# kawaiiban

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  cloudbuild.yaml
backend/: database.py  main.py  pm.db  pyproject.toml  test_main.py
docs/: DB_SCHEMA.md  PLAN.md
frontend/: AGENTS.md
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AiSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.tsx  NewCardForm.tsx  RegisterForm.tsx
frontend/src/lib/: auth.ts
scripts/: start_mac.sh  start_pc.bat  stop_linux.sh  stop_pc.bat
