[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend serving the PM frontend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.0",
    "pytest",
    "httpx",
    "openai",
    "python-dotenv",
    "bcrypt",
    "python-jose[cryptography]",
]
